objects/SO_Experience_Guest__c.object
<CustomObject>
    <label>Experience Guest</label>
    <nameField>
        <label>Guest Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Experience Guests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>SO_Experience__c</fullName>
        <label>Experience</label>
        <referenceTo>SO_Experience__c</referenceTo>
        <relationshipLabel>Guests</relationshipLabel>
        <relationshipName>Guests</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SO_Dietary_Requirements__c</fullName>
        <label>Dietary Requirements</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SO_Driver_Certification_Checked__c</fullName>
        <label>Driver Certification Checked?</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Unknown</fullName>
                    <default>true</default>
                    <label>Unknown</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>